deploy/gitops-cluster-config/prodk8s/applications/fad/istio-prod-digital-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-prod-digital
  labels:
    argocd.argoproj.io/managed-by: cicd
